--- a/polls/templates/polls/detail.html
+++ b/polls/templates/polls/detail.html
@@ -3,7 +3,7 @@
 {% if error_message %}
 	<p><strong></strong>{{ error_message }}</p>
 {% endif %}
-<form action="{% url 'polls:vote' question_id %}" method="post">
+<form action="{% url 'polls:votes' question.id %}" method="post">
 	{% csrf_token %}
 	{% for choice in question.choice_set.all %}
 		<input type="radio" name="choice" id="choice{{ forloop.counter }}"  value="{{ choice.id }}"/>
