--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,9 +1,11 @@
+{% load staticfiles %}
 {% if latest_question_list %}
+<link rel="stylesheet" type="text/css" href="{% static 'polls/style.css' %}">
 	<ul>
 		{% for question in latest_question_list %}
 			<li><a href="{% url 'polls:detail' question.id %}">{{ question.question_text }}</a></li>
 		{% endfor %}
 	</ul>
 {% else %}
-	<p>No polls are availabe.</p>
+	<p>No polls are available.</p>
 {% endif %}
